Tried fixing center align

--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,8 @@ skinnyTextDamian {
   background: black;
   padding: 30px 10px;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #javon.column{
